specs/001-typescript-to-zig-native/examples/invalid/commonjs.ts
// expect-error E_UNSUPPORTED_COMMONJS
const fs = require("fs");
